edit bukti pembayaran penjualan

--- a/bukti_pembayaran_penjualan_new.html
+++ b/bukti_pembayaran_penjualan_new.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Bukti Pembayaran New - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
+<title>Bukti Pembayaran Penjualan New - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -119,23 +119,16 @@
             <!-- /widget-header -->
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
+                <a href="bukti_pembayaran_penjualan_list.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">List</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="pembelian_new.html" class="shortcut" style="width: 100%;">
+                <a href="#" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-file"></i>
                   <span class="shortcut-label">New</span> 
-                </a>
-              </div>
-              <!-- /shortcuts --> 
-              <div class="shortcuts"> 
-                <a href="pembelian_grafik.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-bar-chart"></i>
-                  <span class="shortcut-label">Grafik</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
@@ -148,7 +141,7 @@
         <div class="span10">
           <div class="widget">
             <div class="widget-header"> <i class="icon-th-list"></i>
-              <h3>Bukti Pembayaran</h3>
+              <h3>Bukti Pembayaran Penjualan</h3>
             </div>
             <!-- /widget-header -->
             <div class="widget-content">
@@ -211,6 +204,11 @@
                     <label for="note">User ID:</label>
                     <textarea id="note" name="note" value="" placeholder="User ID"></textarea>
                   </div> <!-- /field -->
+
+                  <div class="pull-right">
+                    <button type="reset" class="button btn btn-default btn-large">Reset</button>
+                    <button class="button btn btn-primary btn-large">Submit</button>
+                  </div>
                   
                 </div> <!-- /form-fields -->
                 
