--- a/bukti_pembayaran_penjualan_list.html
+++ b/bukti_pembayaran_penjualan_list.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>List Pembelian - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
+<title>List Bukti Pembayaran Penjualan - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -118,23 +118,16 @@
             <!-- /widget-header -->
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="pembelian_list.html" class="shortcut" style="width: 100%;">
+                <a href="#" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">List</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="bukti_pembayaran_new.html" class="shortcut" style="width: 100%;">
+                <a href="bukti_pembayaran_penjualan_new.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-file"></i>
                   <span class="shortcut-label">New</span> 
-                </a>
-              </div>
-              <!-- /shortcuts --> 
-              <div class="shortcuts"> 
-                <a href="pembelian_grafik.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-bar-chart"></i>
-                  <span class="shortcut-label">Grafik</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
@@ -147,45 +140,34 @@
         <div class="span10">
           <div class="widget widget-table action-table">
             <div class="widget-header"> <i class="icon-th-list"></i>
-              <h3>List Table Pembelian</h3>
+              <h3>List Bukti Pembayaran Penjualan</h3>
             </div>
             <!-- /widget-header -->
             <div class="widget-content">
               <table class="table table-striped table-bordered">
                 <thead>
                   <tr>
-                    <th> Resource </th>
-                    <th> URL</th>
-                    <th class="td-actions"> </th>
+                    <th> No. </th>
+                    <th> Tanggal Transaksi </th>
+                    <th> No. Transaksi </th>
+                    <th> No. Rekening </th>
+                    <th> No. Invoice </th>
+                    <th> Total Tagihan </th>
+                    <th> Jenis Transaksi </th>
+                    <th class="td-actions"> Actions</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
+                    <td> 1. </td>
+                    <td> 17/08/2016 </td>
+                    <td> 08190930 </td>
+                    <td> 910191019101901 </td>
+                    <td> 0103/INV-XII/2015 </td>
+                    <td> Rp 54.864.000</td>
+                    <td> Transfer </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>
-                  <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
-                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>
-                  <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
-                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>
-                  <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
-                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>
-                  <tr>
-                    <td> Data Dummy </td>
-                    <td> http://localhost/ </td>
-                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>
-                
+                  </tr>                
                 </tbody>
               </table>
             </div>
