edit laporan keuangan

--- a/bukti_pembayaran_penjualan_new.html
+++ b/bukti_pembayaran_penjualan_new.html
@@ -207,7 +207,7 @@
 
                   <div class="pull-right">
                     <button type="reset" class="button btn btn-default btn-large">Reset</button>
-                    <button class="button btn btn-primary btn-large">Submit</button>
+                    <a href="print_bukti_pembayaran.html" class="button btn btn-primary btn-large">Submit</a>
                   </div>
                   
                 </div> <!-- /form-fields -->
