--- a/kwitansi_penjualan_new.html
+++ b/kwitansi_penjualan_new.html
@@ -187,7 +187,7 @@
                   <div class="form-actions">
                   <div class="pull-right">
                     <button type="reset" class="button btn btn-default btn-large">Reset</button>
-                    <button class="button btn btn-primary btn-large"><a href="print_kwitansi.html"></a> Submit</button>
+                    <a href="print_kwitansi.html" class="button btn btn-primary btn-large">Submit</a>
                   </div>
                 </div> <!-- .actions -->
                   
