--- a/client_edit.html
+++ b/client_edit.html
@@ -46,7 +46,7 @@
                 </li>
                 <li><a href="pembelian.html"><i class="icon-chevron-sign-left"></i><span>Pembelian</span></a></li>
                 <li><a href="penjualan.html"><i class="icon-chevron-sign-right"></i><span>Penjualan</span></a></li>
-                <li><a href="laporan_keuangan.html"><i class="icon-paste"></i><span>Laporan</span></a></li>
+                <li><a href="laporan.html"><i class="icon-paste"></i><span>Laporan</span></a></li>
                 <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-flag-alt"></i><span>Persiapan</span> <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="pengguna.html">Pengguna</a></li>
@@ -117,7 +117,7 @@
                       <li><a href="pengeluaran_bahan_baku.html">Pengeluaran Bahan Baku</a></li>
                       <li><a href="produk_dan_bahan_baku_keluaran.html">Produk & Bahan Baku Keluaran</a></li>
                   </ul>
-              <li><a href="laporan_keuangan.html"><i class="icon-paste"></i><span>Laporan</span></a></li>
+              <li><a href="laporan.html"><i class="icon-paste"></i><span>Laporan</span></a></li>
               <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
           </ul>
       </div>
