--- a/pembelian_list.html
+++ b/pembelian_list.html
@@ -97,7 +97,7 @@
                       <li><a href="pengeluaran_bahan_baku.html">Pengeluaran Bahan Baku</a></li>
                       <li><a href="produk_dan_bahan_baku_keluaran.html">Produk & Bahan Baku Keluaran</a></li>
                   </ul>
-              <li><a href="laporan_keuangan.html"><i class="icon-paste"></i><span>Laporan</span></a></li>
+              <li><a href="laporan.html"><i class="icon-paste"></i><span>Laporan</span></a></li>
               <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
           </ul>
       </div>
