--- a/biaya_produksi.html
+++ b/biaya_produksi.html
@@ -199,7 +199,7 @@
                   <tr>
                     <td> 5 </td>
                     <td> E-007 </td>
-                    <td> Operator Forklift </td>
+                    <td> Manpower Supply </td>
                     <td> Rp 700.000,00/Span </td>
                     <td> Aktif </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
