--- a/daftar_akun.html
+++ b/daftar_akun.html
@@ -213,6 +213,27 @@
                     <td> 150.000.000,00 </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
                   </tr>
+                  <tr>
+                    <td> <span style="font-weight:bold;">1301</span></td>
+                    <td> Barang </td>
+                    <td> Aktiva Tetap </td>
+                    <td> 600.000.000,00 </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
+                  </tr>
+                  <tr>
+                    <td> <span style="margin-left:15px;">1301-001</span> </td>
+                    <td> Palet </td>
+                    <td> Alat Proyek </td>
+                    <td> 20.000.000,00 </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
+                  </tr>
+                  <tr>
+                    <td> <span style="margin-left:15px;">1301-002</span> </td>
+                    <td> Drum </td>
+                    <td> Alat Proyek </td>
+                    <td> 30.000.000,00 </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
+                  </tr>
                 </tbody>
               </table>
             </div>
