add detail berita acara

--- a/berita_acara_list.html
+++ b/berita_acara_list.html
@@ -159,7 +159,7 @@
                     <th> Nilai Tagihan </th>
                     <th> Lampiran </th>
                     <th> Yang menerima </th>
-                    <th class="td-actions">Actions</th>
+                    <th class="td-actions"><div style="width:150px;">Actions</div></th>
                   </tr>
                 </thead>
                 <tbody>
@@ -170,7 +170,7 @@
                     <td> Rp. 15.000.000,00 </td>
                     <td> Kwitansi, Invoice, PO </td>
                     <td> Budi Sudarsono </td>
-                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a><a class="btn btn-small btn-warning" href="berita_acara_detail_insentif_hari_raya.html">Detail</a></td>
                   </tr>              
                 </tbody>
               </table>
