--- a/berita_acara_detail_ops.html
+++ b/berita_acara_detail_ops.html
@@ -214,175 +214,94 @@ ol, ul {
           <div class="widget widget-table action-table">
             <div id="sticky-anchor"></div>
             <div id="sticky" class="widget-header"> <i class="icon-th-list"></i>
-              <h3>REKAPITULASI POTONGAN BPJS KETENAGA KERJAAN</h3>
+              <h3>Buku Kas Keuangan</h3>
             </div>
             <div style="padding:10px;background:white;border: 1px solid #D5D5D5;">PERIODE  : Januari 2016</div>
             <!-- /widget-header -->
-            <div class="widget-content" style="height:500px;">
+            <div class="widget-content" style="min-height:400px;">
               <table class="table table-striped table-bordered sticky-header" id="fixTable">
                 <thead>
                   <tr>
-                    <th><div class="wdclm">Group</div></th>
-                    <th><div class="wdclm no">No.</div></th>
-                    <th><div class="wdclm">Nama</div></th>
-                    <th><div class="wdclm">BPJS Ketenaga Kerjaan</div></th>
-                    <th><div class="wdclm">BPJS Kesehatan</div></th>
-                    <th><div class="wdclm">Perusahaan</div></th>
+                    <th><div class="wdclm">Tanggal</div></th>
+                    <th><div class="wdclm">Uraian</div></th>
+                    <th><div class="wdclm">Debit</div></th>
+                    <th><div class="wdclm">Tanggal</div></th>
+                    <th><div class="wdclm">Uraian</div></th>
+                    <th><div class="wdclm">Kredit</div></th>
                     <th><div class="wdclm">Keterangan</div></th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td>Group 1</td>
-                    <td>01</td>
-                    <td>FEBRI. DW</td>
                     <td></td>
+                    <td>Total Pengeluaran Gaji Operator dan Lain2</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>02</td>
-                    <td>MULYADI</td>
                     <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
                   </tr>
                   <tr>
-                    <td>&nbsp;</td>
-                    <td>03</td>
-                    <td>MUKTAR</td>
                     <td></td>
+                    <td>Group I</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>04</td>
-                    <td>MURSALI</td>
                     <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
                   </tr>
                   <tr>
-                    <td>Group 2</td>
-                    <td>01</td>
-                    <td>FEBRI. DW</td>
                     <td></td>
+                    <td>Group I</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>02</td>
-                    <td>MULYADI</td>
                     <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
                   </tr>
                   <tr>
-                    <td>&nbsp;</td>
-                    <td>03</td>
-                    <td>MUKTAR</td>
                     <td></td>
+                    <td>Group II</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>04</td>
-                    <td>MURSALI</td>
                     <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
                   </tr>
                   <tr>
-                    <td>Group 3</td>
-                    <td>01</td>
-                    <td>FEBRI. DW</td>
                     <td></td>
+                    <td>Group III</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>02</td>
-                    <td>MULYADI</td>
                     <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
                   </tr>
                   <tr>
-                    <td>&nbsp;</td>
-                    <td>03</td>
-                    <td>MUKTAR</td>
                     <td></td>
+                    <td>Group IV</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>04</td>
-                    <td>MURSALI</td>
                     <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
                   </tr>
                   <tr>
-                    <td>Group 4</td>
-                    <td>01</td>
-                    <td>FEBRI. DW</td>
                     <td></td>
+                    <td>Shobur</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>02</td>
-                    <td>MULYADI</td>
                     <td></td>
                     <td></td>
                     <td></td>
                     <td></td>
                   </tr>
                   <tr>
-                    <td>&nbsp;</td>
-                    <td>03</td>
-                    <td>MUKTAR</td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>04</td>
-                    <td>MURSALI</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
                     <td>Total</td>
+                    <td>Rp. </td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>Total</td>
+                    <td>Rp. </td>
                     <td></td>
                   </tr>
                 </tbody>
