--- a/berita_acara_detail_slip_gaji.html
+++ b/berita_acara_detail_slip_gaji.html
@@ -134,7 +134,7 @@ ol, ul {
               <h3>Shortcuts</h3>
             </div>
             <!-- /widget-header -->
-             <div class="widget-content">
+            <div class="widget-content">
               <div class="shortcuts"> 
                 <a href="berita_acara_detail_insentif_hari_raya.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
@@ -214,176 +214,81 @@ ol, ul {
           <div class="widget widget-table action-table">
             <div id="sticky-anchor"></div>
             <div id="sticky" class="widget-header"> <i class="icon-th-list"></i>
-              <h3>REKAPITULASI POTONGAN BPJS KETENAGA KERJAAN</h3>
+              <h3>Slip Gaji</h3>
             </div>
-            <div style="padding:10px;background:white;border: 1px solid #D5D5D5;">PERIODE  : Januari 2016</div>
+            <div style="padding:10px;background:white;border: 1px solid #D5D5D5;">
+              <p>Periode  : 01 Desember '15 s/d '31 Desember '15</p>
+              <p>Nama  : EKO WIBOWO</p>
+              <p>Jabatan  : Operator Porklift</p>
+            </div>
             <!-- /widget-header -->
-            <div class="widget-content" style="height:500px;">
+            <div class="widget-content" style="min-height:400px;">
               <table class="table table-striped table-bordered sticky-header" id="fixTable">
                 <thead>
                   <tr>
-                    <th><div class="wdclm">Group</div></th>
-                    <th><div class="wdclm no">No.</div></th>
-                    <th><div class="wdclm">Nama</div></th>
-                    <th><div class="wdclm">BPJS Ketenaga Kerjaan</div></th>
-                    <th><div class="wdclm">BPJS Kesehatan</div></th>
-                    <th><div class="wdclm">Perusahaan</div></th>
+                    <th><div class="wdclm">No.</div></th>
                     <th><div class="wdclm">Keterangan</div></th>
+                    <th><div class="wdclm">Volume</div></th>
+                    <th><div class="wdclm">Satuan</div></th>
+                    <th><div class="wdclm">Jumlah</div></th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td>Group 1</td>
-                    <td>01</td>
-                    <td>FEBRI. DW</td>
+                    <td>1</td>
+                    <td>Gaji Pokok</td>
+                    <td>2.700.000</td>
                     <td></td>
+                    <td></td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>Uang Makan</td>
                     <td></td>
                     <td></td>
                     <td></td>
                   </tr>
                   <tr>
-                    <td>&nbsp;</td>
-                    <td>02</td>
-                    <td>MULYADI</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>03</td>
-                    <td>MUKTAR</td>
-                    <td></td>
+                    <td>3</td>
+                    <td>Uang Transport</td>
                     <td></td>
                     <td></td>
                     <td></td>
                   </tr>
                   <tr>
-                    <td>&nbsp;</td>
-                    <td>04</td>
-                    <td>MURSALI</td>
+                    <td>4</td>
+                    <td>Potongan BPJS</td>
                     <td></td>
+                    <td>100.000</td>
+                    <td>100.000</td>
+                  </tr>
+                  <tr>
+                    <td>5</td>
+                    <td>Potongan Gaji</td>
+                    <td>2</td>
+                    <td>100.000</td>
+                    <td>200.000</td>
+                  </tr>
+                  <tr>
+                    <td>6</td>
+                    <td>Potongan Kasbon</td>
                     <td></td>
                     <td></td>
                     <td></td>
                   </tr>
                   <tr>
-                    <td>Group 2</td>
-                    <td>01</td>
-                    <td>FEBRI. DW</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>7</td>
+                    <td>Overtime</td>
+                    <td>20</td>
+                    <td>100.000</td>
+                    <td>100.000</td>
                   </tr>
                   <tr>
-                    <td>&nbsp;</td>
-                    <td>02</td>
-                    <td>MULYADI</td>
+                    <td></td>
+                    <td>TOTAL GAJI YANG DITERIMA</td>
                     <td></td>
                     <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>03</td>
-                    <td>MUKTAR</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>04</td>
-                    <td>MURSALI</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>Group 3</td>
-                    <td>01</td>
-                    <td>FEBRI. DW</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>02</td>
-                    <td>MULYADI</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>03</td>
-                    <td>MUKTAR</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>04</td>
-                    <td>MURSALI</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>Group 4</td>
-                    <td>01</td>
-                    <td>FEBRI. DW</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>02</td>
-                    <td>MULYADI</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>03</td>
-                    <td>MUKTAR</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>&nbsp;</td>
-                    <td>04</td>
-                    <td>MURSALI</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                  </tr>
-                  <tr>
-                    <td>Total</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>2.600.000</td>
                   </tr>
                 </tbody>
               </table>
