--- a/berita_acara_detail_absen_tagihan.html
+++ b/berita_acara_detail_absen_tagihan.html
@@ -137,7 +137,7 @@ ol, ul {
               <h3>Shortcuts</h3>
             </div>
             <!-- /widget-header -->
-            <div class="widget-content">
+             <div class="widget-content">
               <div class="shortcuts"> 
                 <a href="berita_acara_detail_insentif_hari_raya.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
@@ -167,42 +167,42 @@ ol, ul {
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="berita_acara_new.html" class="shortcut" style="width: 100%;">
+                <a href="berita_acara_detail_slip_gaji.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">Slip Gaji</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="berita_acara_new.html" class="shortcut" style="width: 100%;">
+                <a href="berita_acara_detail_rekap.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">Rekap</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="berita_acara_new.html" class="shortcut" style="width: 100%;">
+                <a href="berita_acara_detail_kasbon_operator.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">Kasbon Operator</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="berita_acara_new.html" class="shortcut" style="width: 100%;">
+                <a href="berita_acara_detail_ops.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">OPS</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="berita_acara_new.html" class="shortcut" style="width: 100%;">
+                <a href="berita_acara_detail_bpjs.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">BPJS</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="berita_acara_new.html" class="shortcut" style="width: 100%;">
+                <a href="berita_acara_detail_aplikasi_setoran.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">Aplikasi Setoran</span> 
                 </a>
