--- a/permintaan_pembelian.html
+++ b/permintaan_pembelian.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>List Kwitansi - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
+<title>Permintaan Pembelian - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -125,7 +125,7 @@
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="kwitansi_new.html" class="shortcut" style="width: 100%;">
+                <a href="permintaan_pembelian_new.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-file"></i>
                   <span class="shortcut-label">New</span> 
                 </a>
@@ -147,7 +147,7 @@
         <div class="span10">
           <div class="widget widget-table action-table">
             <div class="widget-header"> <i class="icon-th-list"></i>
-              <h3>List Kwitansi</h3>
+              <h3>Permintaan Pembelian</h3>
             </div>
             <!-- /widget-header -->
             <div class="widget-content">
