--- a/bukti_pembayaran.html
+++ b/bukti_pembayaran.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Pembelian - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
+<title>Bukti Pembayaran - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -14,7 +14,6 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link href="assets/css/pages/dashboard.css" rel="stylesheet">
 <link href="assets/css/sticky-footer-navbar.css" rel="stylesheet">
-<link href="assets/css/pages/form.css" rel="stylesheet" type="text/css">
 <link href="assets/css/custom.css" rel="stylesheet">
 <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
@@ -111,128 +110,24 @@
   <div class="main-inner">
     <div class="container">
       <div class="row">
-        <div class="span3">
+        <div class="span2">
           <div class="widget">
-            <div class="widget-content">
-              <div class="shortcuts"> 
-                <a href="permintaan_pembelian.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-shopping-cart"></i>
-                  <span class="shortcut-label">Permintaan Pembelian</span> 
-                </a>
-              </div>
-              <!-- /shortcuts -->
+            <div class="widget-header"> <i class="icon-bookmark"></i>
+              <h3>Shortcuts</h3>
             </div>
-            <!-- /widget-content - permintaan pembelian--> 
-          </div>
-          <!-- /widget -->
-        </div>
-        <!-- /span3 -->
-        <div class="span1">
-          <div class="widget">
-            <div class="widget-content" style="border: none;background: initial;">
-              <div class="shortcuts"> 
-                <a href="#" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-arrow-right"></i> 
-                </a>
-              </div>
-              <!-- /shortcuts -->
-            </div>
-            <!-- /widget-content --> 
-          </div>
-          <!-- /widget -->
-        </div>
-        <!-- /span1 -->
-        <div class="span3">
-          <div class="widget">
-            <div class="widget-content">
-              <div class="shortcuts"> 
-                <a href="kwitansi.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-file"></i>
-                  <span class="shortcut-label">Kwitansi</span> 
-                </a>
-              </div>
-              <!-- /shortcuts -->
-            </div>
-            <!-- /widget-content-kwitansi -->
-          </div>
-          <!-- /widget -->
-        </div>
-        <!-- /span3 -->
-        <div class="span1">
-          <div class="widget">
-            <div class="widget-content" style="border: none;background: initial;">
-              <div class="shortcuts"> 
-                <a href="#" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-arrow-right"></i> 
-                </a>
-              </div>
-              <!-- /shortcuts -->
-            </div>
-            <!-- /widget-content --> 
-          </div>
-          <!-- /widget -->
-        </div>
-        <!-- /span1 -->
-        <div class="span3">
-          <div class="widget">
-            <div class="widget-content">
-              <div class="shortcuts"> 
-                <a href="surat_jalan.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-truck"></i>
-                  <span class="shortcut-label">Surat Jalan</span> 
-                </a>
-              </div>
-              <!-- /shortcuts -->
-            </div>
-            <!-- /widget-content - surat jalan-->
-          </div>
-          <!-- /widget -->
-        </div>
-        <!-- /span3 -->
-      </div>
-      <div class="row">
-        <div class="span8">&nbsp;
-        </div>
-        <!-- /span1 -->
-        <div class="span3">
-          <div class="widget">
-            <div class="widget-content" style="border: none;background: initial;">
-              <div class="shortcuts"> 
-                <a href="#" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-arrow-down"></i> 
-                </a>
-              </div>
-              <!-- /shortcuts -->
-            </div>
-            <!-- /widget-content --> 
-          </div>
-          <!-- /widget -->
-        </div>
-        <!-- /span1 -->
-      </div>
-      <div class="row">
-        <div class="span3">
-          <div class="widget">
+            <!-- /widget-header -->
             <div class="widget-content">
               <div class="shortcuts"> 
                 <a href="bukti_pembayaran.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
-                  <span class="shortcut-label">Bukti Pembayaran</span> 
+                  <span class="shortcut-label">List</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
-            </div>
-            <!-- /widget-content - bukti pembayaran-->
-          </div>
-          <!-- /widget -->
-        </div>
-        <!-- /span3 -->
-        <div class="span1">
-          <div class="widget">
-            <div class="widget-content" style="border: none;background: initial;">
               <div class="shortcuts"> 
-                <a href="#" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-arrow-left"></i> 
+                <a href="bukti_pembayaran_new.html" class="shortcut" style="width: 100%;">
+                  <i class="shortcut-icon icon-file"></i>
+                  <span class="shortcut-label">New</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
@@ -241,55 +136,59 @@
           </div>
           <!-- /widget -->
         </div>
-        <!-- /span1 -->
-        <div class="span3">
-          <div class="widget">
-            <div class="widget-content">
-              <div class="shortcuts"> 
-                <a href="tanda_terima_pembelian_list.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-copy"></i>
-                  <span class="shortcut-label">Tanda Terima</span> 
-                </a>
-              </div>
-              <!-- /shortcuts -->
+        <!-- /span4 -->
+        <div class="span10">
+          <div class="widget widget-table action-table">
+            <div class="widget-header"> <i class="icon-th-list"></i>
+              <h3>Bukti Pembayaran</h3>
             </div>
-            <!-- /widget-content-tanda terima --> 
-          </div>
-          <!-- /widget -->
-        </div>
-        <!-- /span3 -->
-        <div class="span1">
-          <div class="widget">
-            <div class="widget-content" style="border: none;background: initial;">
-              <div class="shortcuts"> 
-                <a href="#" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-arrow-left"></i> 
-                </a>
-              </div>
-              <!-- /shortcuts -->
+            <!-- /widget-header -->
+            <div class="widget-content">
+              <table class="table table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th> Resource </th>
+                    <th> URL</th>
+                    <th class="td-actions"> </th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td> Data Dummy </td>
+                    <td> http://localhost/ </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
+                  </tr>
+                  <tr>
+                    <td> Data Dummy </td>
+                    <td> http://localhost/ </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
+                  </tr>
+                  <tr>
+                    <td> Data Dummy </td>
+                    <td> http://localhost/ </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
+                  </tr>
+                  <tr>
+                    <td> Data Dummy </td>
+                    <td> http://localhost/ </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
+                  </tr>
+                  <tr>
+                    <td> Data Dummy </td>
+                    <td> http://localhost/ </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
+                  </tr>
+                
+                </tbody>
+              </table>
             </div>
             <!-- /widget-content --> 
           </div>
           <!-- /widget -->
         </div>
-        <!-- /span1 -->
-        <div class="span3">
-          <div class="widget">
-            <div class="widget-content">
-              <div class="shortcuts"> 
-                <a href="invoice.html" class="shortcut" style="width: 100%;">
-                  <i class="shortcut-icon icon-file-text-alt"></i>
-                  <span class="shortcut-label">Invoice</span> 
-                </a>
-              </div>
-              <!-- /shortcuts -->
-            </div>
-            <!-- /widget-content-invoice --> 
-          </div>
-          <!-- /widget -->
-        </div>
-        <!-- /span3 -->
-      </div>  
+        <!-- /span8 -->
+      </div>
+      <!-- /row --> 
     </div>
     <!-- /container --> 
   </div>
@@ -300,7 +199,7 @@
   <div class="footer-inner">
     <div class="container">
       <div class="row">
-        <div class="span12"> &copy; 2015 <a href="http://www.egrappler.com/">Web Application</a>. </div>
+        <div class="span12"> &copy; 2015 <a href="http://localhost/">Web Application</a>. </div>
         <!-- /span12 --> 
       </div>
       <!-- /row --> 
