--- a/daftar_aktiva_tetap.html
+++ b/daftar_aktiva_tetap.html
@@ -153,9 +153,9 @@
                     <th> Keterangan </th>
                     <th> Tipe Aktiva </th>
                     <th> Akun Aktiva </th>
-                    <th> Biaya Aktiva </th>
-                    <th> Tgl Pakai </th>
+                    <th> Harga Aktiva </th>
                     <th> Tgl Beli </th>
+                    <th> Tgl Pakai </th>
                     <th> Qty </th>
                     <th> Umur Bulan Aktiva </th>
                     <th> %Penyusut/Tahun </th>
