--- a/bpu.html
+++ b/bpu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>List Penawaran Penjualan - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
+<title>Bukti Pengeluaran Uang - Aplikasi Keuangan PT. Putra Bahari Mandiri</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -119,14 +119,14 @@
             <!-- /widget-header -->
             <div class="widget-content">
               <div class="shortcuts"> 
-                <a href="#" class="shortcut" style="width: 100%;">
+                <a href="bpu.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-list-alt"></i>
                   <span class="shortcut-label">List</span> 
                 </a>
               </div>
               <!-- /shortcuts -->
               <div class="shortcuts"> 
-                <a href="penawaran_penjualan_new.html" class="shortcut" style="width: 100%;">
+                <a href="bpu_new.html" class="shortcut" style="width: 100%;">
                   <i class="shortcut-icon icon-file"></i>
                   <span class="shortcut-label">New</span> 
                 </a>
@@ -141,46 +141,50 @@
         <div class="span10">
           <div class="widget widget-table action-table">
             <div class="widget-header"> <i class="icon-th-list"></i>
-              <h3>List Penawaran Penjualan</h3>
-              <div style="float:right; margin-top:5px; margin-right:5px;">
-                <input type="checkbox">Terproses
-                <input type="checkbox">Ditutup
-                <input type="checkbox">Menunggu
-                <input type="checkbox">Mengantri
-              </div>
+              <h3>Bukti Pengeluaran Uang</h3>
             </div>
             <!-- /widget-header -->
             <div class="widget-content">
               <table class="table table-striped table-bordered">
                 <thead>
                   <tr>
-                    <th> Tanggal </th>
-                    <th> No. Penawaran </th>
-                    <th> No. Pemesan </th>
-                    <th> Dipesan Oleh </th>
-                    <th> Status </th>
-                    <th> Diskon </th>
-                    <th> Pajak </th>
-                    <th> Biaya Kirim </th>
-                    <th> Nilai Faktur </th>
-                    <th> Keterangan</th>
-                    <th class="td-actions">Actions</th>
+                    <th> Request By </th>
+                    <th> Keterangan </th>
+                    <th> Besaran (Harga) </th>
+                    <th> Terbilang </th>
+                    <th> Approved By </th>
+                    <th> Project </th>
+                    <th class="td-actions"> </th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td> 2016/01/01 </td>
-                    <td> 1000 </td>
-                    <td> 1001 </td>
-                    <td> PT. Client 1 </td>
-                    <td> Mengantri </td>
-                    <td> - </td>
-                    <td> Rp 180.000 </td>
-                    <td> - </td>
-                    <td> Rp 385.000 </td>
-                    <td> - </td>
+                    <td> Eko </td>
+                    <td> Transport ke Bekasi </td>
+                    <td> Rp 100.000 </td>
+                    <td> Seratus Ribu Rupiah </td>
+                    <td> Andri L. </td>
+                    <td> No </td>
                     <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
-                  </tr>                
+                  <tr>
+                    <td> Eko </td>
+                    <td> Transport ke Bekasi </td>
+                    <td> Rp 100.000 </td>
+                    <td> Seratus Ribu Rupiah </td>
+                    <td> Andri L. </td>
+                    <td> Yes </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
+                  </tr>
+                  <tr>
+                    <td> Eko </td>
+                    <td> Transport ke Bekasi </td>
+                    <td> Rp 100.000 </td>
+                    <td> Seratus Ribu Rupiah </td>
+                    <td> Andri L. </td>
+                    <td> Yes </td>
+                    <td class="td-actions"><a href="javascript:;" class="btn btn-small btn-success"><i class="btn-icon-only icon-ok"> </i></a><a href="javascript:;" class="btn btn-danger btn-small"><i class="btn-icon-only icon-remove"> </i></a></td>
+                  </tr>
+                
                 </tbody>
               </table>
             </div>
