--- a/berita_acara_detail_rekap.html
+++ b/berita_acara_detail_rekap.html
@@ -107,6 +107,7 @@ ol, ul {
               <li><a href="pembelian.html"><i class="icon-chevron-sign-left"></i><span>Pembelian</span></a></li>
               <li><a href="penjualan.html"><i class="icon-chevron-sign-right"></i><span>Penjualan</span></a></li>
               <li><a href="proyek_dashboard.html"><i class="icon-road"></i><span>Proyek</span></a></li>
+<li><a href="bpu.html"><i class="icon-paste"></i><span>BPU</span></a></li>
               <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-puzzle-piece"></i><span>Pabrikasi</span> <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                       <li><a href="bahan_baku.html">Bahan Baku</a></li>
