--- a/client_list_submit_new.html
+++ b/client_list_submit_new.html
@@ -36,6 +36,7 @@
                     </ul>
                 </li>
                 <li><a href="proyek_dashboard.html"><i class="icon-road"></i><span>Proyek</span></a></li>
+<li><a href="bpu.html"><i class="icon-paste"></i><span>BPU</span></a></li>
                 <li><a href="karyawan_list.html"><i class="icon-user"></i><span>Karyawan</span></a></li>
                 <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-list-ul"></i><span>Daftar</span> <b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -108,6 +109,7 @@
               <li><a href="pembelian.html"><i class="icon-chevron-sign-left"></i><span>Pembelian</span></a></li>
               <li><a href="penjualan.html"><i class="icon-chevron-sign-right"></i><span>Penjualan</span></a></li>
               <li><a href="proyek_dashboard.html"><i class="icon-road"></i><span>Proyek</span></a></li>
+<li><a href="bpu.html"><i class="icon-paste"></i><span>BPU</span></a></li>
               <li class="dropdown"><a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"> <i class="icon-puzzle-piece"></i><span>Pabrikasi</span> <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                       <li><a href="bahan_baku.html">Bahan Baku</a></li>
